--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     </article>
 
     <article class="trainer">
-      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights">
       <div class="trainer-bio text-left">
         <h3>Harry "the Headband" Smith</h3>
         <h4>Strength</h4>
@@ -153,6 +154,32 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.711135894795!2d-74.2605005843535!3d40.30437237038859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3d30ee89a2d29%3A0xbe0ac8db89a5b6e3!2s34%20Kinglet%20Ave%2C%20Marlboro%2C%20NJ%2007746!5e0!3m2!1sen!2sus!4v1618528584948!5m2!1sen!2sus"
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any Questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br/>
+          Some Town, CA <br/>
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="malito:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
+
   </section>
 
   <!-- footer -->
