--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.711135894795!2d-74.2605005843535!3d40.30437237038859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3d30ee89a2d29%3A0xbe0ac8db89a5b6e3!2s34%20Kinglet%20Ave%2C%20Marlboro%2C%20NJ%2007746!5e0!3m2!1sen!2sus!4v1618528584948!5m2!1sen!2sus"
