--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
         allowfullscreen="" 
         loading="lazy">
       </iframe>
+      <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+          <label for="contact-name">Your Name</label>
+          <input type="text" id="contact-name" placeholder="Your Name" />
+
+          <label for="contact-message">Contact Message</label>
+          <textarea id="contact-message" palceholder="Message"> </textarea>'
+          
+          <button type="submit">submit</button>
+        </form>
+      </div>
       <div>
         <h3>Run Buddy</h3>
         <p>
