--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <div class="hero-cta">
       <h2>Start Building Skills</h2>
       <p>
-        seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+        seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
+        messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
+        Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
+        tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
+        probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
       </p>
     </div>
     <div class="hero-form">
@@ -71,15 +75,20 @@
 
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro">
-    <h2 class="section-title primary-border">
-      What We Do
-    </h2>
-    <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
-      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
-      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-      sustainable Intelligentsia umami deep v craft
-    </p>
+    <div class="flex-row">
+      <h2 class="section-title primary-border">
+        What We Do
+      </h2>
+    </div>
+    <div class="flex-row">
+      <p>
+        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade
+        Blue
+        Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+        fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+        sustainable Intelligentsia umami deep v craft
+      </p>
+    </div>
   </section>
 
   <!-- "what you do" section -->
@@ -163,11 +172,7 @@
     <div class="contact-info">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.711135894795!2d-74.2605005843535!3d40.30437237038859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3d30ee89a2d29%3A0xbe0ac8db89a5b6e3!2s34%20Kinglet%20Ave%2C%20Marlboro%2C%20NJ%2007746!5e0!3m2!1sen!2sus!4v1618528584948!5m2!1sen!2sus"
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy">
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
       </iframe>
       <div class="contact-form">
         <h3>Contact Us</h3>
@@ -177,7 +182,7 @@
 
           <label for="contact-message">Contact Message</label>
           <textarea id="contact-message" palceholder="Message"> </textarea>'
-          
+
           <button type="submit">submit</button>
         </form>
       </div>
@@ -189,10 +194,10 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          55 Main Street <br/>
-          Some Town, CA <br/>
+          55 Main Street <br />
+          Some Town, CA <br />
           12345<br />
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br />
           E: <a href="malito:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
