--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,6 +8,7 @@
     <title>Privacy Policy - RunBuddy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/secondary-styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
